2008-04-03  Tor Lillqvist  <tml@novell.com>

	Bug 525972 - UCS-4 not in the new win_iconv implementation

	* glib/win_iconv.c: Add UCS-4. Also add spelling of UCS-2 without
	the hyphen.

2008-04-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 448943 – g_timeout_add_seconds() problems

	* glib/gmain.c (g_timeout_set_expiration): Prevent expiration
	time going negative. Reported by Cody Russell, analyzed by
	Olivier Crete, patch by Sjoerd Simons.

2008-04-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 525674 – A typo in gmarkup.c

	* glib/gmarkup.c (g_markup_parse_context_get_element_stack): Fix
	the docs, reported by Hiroyuki Ikezoe

2008-04-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 525732 – Error in documentation for g_list_first

	* glib/glist.c (g_list_first): Fix the docs, reported by 
	Salvatore Iovene

2008-04-02  Tor Lillqvist  <tml@novell.com>

	Bug 524314 - g_convert() on Win32 implicitly converts full width
	alphanumerics into half width
	
	* glib/win_iconv.c: Update from Yukihiro Nakadaira. Use
	WC_NO_BEST_FIT_CHARS flag for WideCharToMultiByte() unless the
	//translit flag was suffixed to the codeset name.

	* glib/gconvert.c: Include win_iconv.c earlier so that its
	definition of WINVER before it includes <windows.h> is used.

2008-03-31  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.c (g_poll): Improve fix for #525192 below: Use
	SleepEx() so that the sleep is alertable. Thanks to John
	Ehresman.

2008-03-31  Tor Lillqvist  <tml@novell.com>

	* glib/gwin32.c
	(g_win32_get_package_installation_directory_of_module): Fix Cygwin
	breakage. Patch by Lieven van der Heide.

2008-03-31 10:39:17  Tim Janik  <timj@imendio.com>

	* glib/gutils.h: reapply inlining fix from r6333 to fix:
	Bug 522292 – Gives warnings in glib/gutils.h with GCC in C99 mode
	and again:
	Bug 315437 – extern inline -> static inline

2008-03-31  Tor Lillqvist  <tml@novell.com>

	Bug 525192 - 100% CPU if run main loop with no IO sources
